# pipeline-incidents-bench

./: .gitignore  LICENSE  README.md  RESULTS.md  VARIANCE.md  pyproject.toml
agents/cursor/: agent.py
agents/example/: agent.py
agents/llm/: agent.py
scenarios/001-upstream-column-rename/: scenario.yaml
scenarios/001-upstream-column-rename/base/: README.md  ingest.py
scenarios/002-vendor-export-format-change/: scenario.yaml
scenarios/002-vendor-export-format-change/base/: .gitignore  README.md  ingest.py
scenarios/002-vendor-export-format-change/landing/: orders_2026-06-08.csv  orders_2026-06-09.csv  orders_2026-06-10.csv
scenarios/003-bad-join-refactor/: scenario.yaml
scenarios/003-bad-join-refactor/base/: README.md
scenarios/004-broken-import-refactor/: scenario.yaml
scenarios/004-broken-import-refactor/base/: README.md  ingest.py
scenarios/004-broken-import-refactor/solution/: ingest.py
scenarios/005-duplicate-vendor-rows/: scenario.yaml
scenarios/005-duplicate-vendor-rows/base/: README.md  ingest.py
scenarios/005-duplicate-vendor-rows/landing/: orders_2026-06-08.csv  orders_2026-06-09.csv  orders_2026-06-10.csv
scenarios/006-incremental-backfill/: scenario.yaml
scenarios/007-compound-incident/: scenario.yaml
scenarios/008-fanout-join/: scenario.yaml
scenarios/009-poisoned-numeric-format/: scenario.yaml
scenarios/010-warehouse-path-drift/: scenario.yaml
src/pib/: agents.py  cli.py  context.py  pipeline.py  scoring.py  spec.py  workspace.py
tools/: variance_runs.ndjson  variance_study.py
(+92 files in other folders)
